--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
 		<script src="libs/angular/ui-bootstrap.js"></script>
 		<script src="libs/angular/angular-colorpicker/js/bootstrap-colorpicker-module.min.js"></script>
 		<script src="libs/angular/angular-animate.min.js"></script>
+    <script src="libs/angular/angular-touch.min.js"></script>
 		<script src="libs/d3/d3.min.js"></script>
-		
+
 		<script src="app/app.js"></script>
 		<script src="app/controllers/controllers.js"></script>
-    	<script src="app/directives/directives.js"></script>
-    	<script src="app/services/services.js"></script>
+    <script src="app/directives/directives.js"></script>
+    <script src="app/services/services.js"></script>
 	</body>
 </html>
